package han.triptop.backend.adapter;

public interface IAdapter {
}
